--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
         <div id="app" style="padding:2.5rem"></div>
         <script type="text/javascript">
             setTimeout(() => {
-                window.renderKompletthetApp('app', {
-                    endpoints: {},
-                    behandlingUuid: '123',
-                    readOnly: false,
-                    onFinished: () => console.log('Aksjonspunkt løst')
-                });
+                window.renderKompletthetApp('app');
             }, 300);
         </script>
     </body>
