TSF-2648 - Tekstendringer og nye alertbokser

--- a/index.html
+++ b/index.html
@@ -20,11 +20,21 @@
                         { journalpostId: '4444', href: '/bar' },
                     ],
                     arbeidsforhold: {
-                        123456789: {
-                            navn: 'MOCK MOCKESEN AS',
-                        },
-                        234567890: {
-                            fødselsdato: '01.01.2048',
+                        896929119: {
+                            identifikator: '896929119',
+                            personIdentifikator: null,
+                            navn: 'SAUEFABRIKK',
+                            fødselsdato: null,
+                            arbeidsforholdreferanser: [
+                                {
+                                    internArbeidsforholdId: 'b28c0e54-0e9d-4af4-bdde-37c4d5cc5b7e',
+                                    eksternArbeidsforholdId: '2',
+                                },
+                                {
+                                    internArbeidsforholdId: 'e0018e43-25a6-4722-844c-7483d7528424',
+                                    eksternArbeidsforholdId: '1',
+                                },
+                            ],
                         },
                     },
                     endpoints: {
@@ -32,7 +42,70 @@
                     },
                     httpErrorHandler: () => console.error('An error occured'),
                     onFinished: (data) => console.log('Aksjonspunkt løst', data),
-                    aksjonspunkter: [],
+                    aksjonspunkter: [
+                        {
+                            aksjonspunktType: {
+                                kode: 'MANU',
+                                kodeverk: 'AKSJONSPUNKT_TYPE',
+                            },
+                            begrunnelse: null,
+                            besluttersBegrunnelse: null,
+                            definisjon: {
+                                skalAvbrytesVedTilbakeføring: false,
+                                kode: '9069',
+                                kodeverk: 'AKSJONSPUNKT_DEF',
+                            },
+                            erAktivt: true,
+                            fristTid: null,
+                            kanLoses: false,
+                            status: {
+                                kode: 'UTFO',
+                                kodeverk: 'AKSJONSPUNKT_STATUS',
+                            },
+                            toTrinnsBehandling: false,
+                            toTrinnsBehandlingGodkjent: null,
+                            vilkarType: null,
+                            vurderPaNyttArsaker: null,
+                            venteårsak: {
+                                kanVelgesIGui: false,
+                                kode: '-',
+                                kodeverk: 'VENT_AARSAK',
+                            },
+                            venteårsakVariant: null,
+                            opprettetAv: 'srvk9sak',
+                        },
+                        {
+                            aksjonspunktType: {
+                                kode: 'MANU',
+                                kodeverk: 'AKSJONSPUNKT_TYPE',
+                            },
+                            begrunnelse: 'wwdwdwwqwdwqwqw',
+                            besluttersBegrunnelse: null,
+                            definisjon: {
+                                skalAvbrytesVedTilbakeføring: false,
+                                kode: '9071',
+                                kodeverk: 'AKSJONSPUNKT_DEF',
+                            },
+                            erAktivt: true,
+                            fristTid: null,
+                            kanLoses: false,
+                            status: {
+                                kode: 'UTFO',
+                                kodeverk: 'AKSJONSPUNKT_STATUS',
+                            },
+                            toTrinnsBehandling: true,
+                            toTrinnsBehandlingGodkjent: null,
+                            vilkarType: null,
+                            vurderPaNyttArsaker: null,
+                            venteårsak: {
+                                kanVelgesIGui: false,
+                                kode: '-',
+                                kodeverk: 'VENT_AARSAK',
+                            },
+                            venteårsakVariant: null,
+                            opprettetAv: 'srvk9sak',
+                        },
+                    ],
                 });
             }, 300);
         </script>
