legger til øå igjen

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             identifikator: '896929119',
                             personIdentifikator: null,
                             navn: 'SAUEFABRIKK',
-                            foedselsdato: null,
+                            fødselsdato: null,
                             arbeidsforholdreferanser: [
                                 {
                                     internArbeidsforholdId: 'b28c0e54-0e9d-4af4-bdde-37c4d5cc5b7e',
@@ -42,7 +42,7 @@
                         kompletthetBeregning: 'http://localhost:8082/mock/kompletthet',
                     },
                     httpErrorHandler: () => console.error('An error occured'),
-                    onFinished: (data) => console.log('Aksjonspunkt lost', data),
+                    onFinished: (data) => console.log('Aksjonspunkt løst', data),
                     aksjonspunkter: [
                         {
                             aksjonspunktType: {
@@ -52,7 +52,7 @@
                             begrunnelse: null,
                             besluttersBegrunnelse: null,
                             definisjon: {
-                                skalAvbrytesVedTilbakeforing: false,
+                                skalAvbrytesVedTilbakeføring: false,
                                 kode: '9069',
                                 kodeverk: 'AKSJONSPUNKT_DEF',
                             },
@@ -67,12 +67,12 @@
                             toTrinnsBehandlingGodkjent: null,
                             vilkarType: null,
                             vurderPaNyttArsaker: null,
-                            venteaarsak: {
+                            venteårsak: {
                                 kanVelgesIGui: false,
                                 kode: '-',
                                 kodeverk: 'VENT_AARSAK',
                             },
-                            venteaarsakVariant: null,
+                            venteårsakVariant: null,
                             opprettetAv: 'srvk9sak',
                         },
                         {
@@ -83,7 +83,7 @@
                             begrunnelse: 'wwdwdwwqwdwqwqw',
                             besluttersBegrunnelse: null,
                             definisjon: {
-                                skalAvbrytesVedTilbakeforing: false,
+                                skalAvbrytesVedTilbakeføring: false,
                                 kode: '9071',
                                 kodeverk: 'AKSJONSPUNKT_DEF',
                             },
@@ -98,12 +98,12 @@
                             toTrinnsBehandlingGodkjent: null,
                             vilkarType: null,
                             vurderPaNyttArsaker: null,
-                            venteaarsak: {
+                            venteårsak: {
                                 kanVelgesIGui: false,
                                 kode: '-',
                                 kodeverk: 'VENT_AARSAK',
                             },
-                            venteaarsakVariant: null,
+                            venteårsakVariant: null,
                             opprettetAv: 'srvk9sak',
                         },
                     ],
